Env/Dev/Static_Terraform_Code/Infra_Implementation/Network_Skeleton/igw.tf
resource "aws_internet_gateway" "main_igw" {
 
  vpc_id = aws_vpc.main_vpc.id

  tags = {
    Name = var.igw_name
  }
}
