Env/Dev/Static_Terraform_Code/Infra_Implementation/Network_Skeleton/vpc.tf
resource "aws_vpc" "main_vpc" {
  cidr_block           = var.vpc_cidr
  enable_dns_support   = true
  enable_dns_hostnames = true

  tags = {
    Name        = var.vpc_name
  }
}
